<resources>
    <string name="app_name">ServiceDemo</string>
    <string name="stop_service">Stop Service</string>
    <string name="start_service">Start Service</string>
    <string name="service_demo">Service Demo</string>
    <string name="bind_service">Bind Service</string>
    <string name="unbind_service">Unbind Service</string>
    <string name="get_random_number">Get Random Number</string>
</resources>
